<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="start_ride_button">Start Ride</string>
    <string name="start_update_button">Update Ride</string>
    <string name="show_list_rides_button">Show Rides</string>
    <string name="hide_list_rides_button">Hide Rides</string>
    <string name="scooter_name_field">Enter scooter name</string>
    <string name="scooter_location_field">Enter scooter location</string>
    <string name="author">Made by rasni@itu.dk</string>


    <!-- Strings related to login -->
    <string name="Login">Login</string>
    <string name="Sign_up">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>