<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:animateLayoutChanges="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_ride"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button"
            android:text="@string/start_ride_button"
            app:icon="@drawable/baseline_play_arrow_24"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_ride"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/button"
            android:text="@string/start_update_button"
            android:textAlignment="center"
            app:icon="@drawable/baseline_edit_24"
            app:iconGravity="textStart" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/list_rides"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:text="@string/show_list_rides_button"
            android:textAlignment="center"
            app:icon="@drawable/baseline_arrow_drop_down_24"
            app:iconGravity="textStart"
            app:iconSize="80px" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:headerDividersEnabled="false"
            android:paddingTop="25dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/list_ride_item" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>